2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/22_mult_float_float_aff_float.deca
// Description:
//    Programme avec multiplication simple des floats
// Resultats:
//    Valide 
//
// Historique:
//    cree le 3/1/2024

{
    float f = 1.3*2.1;
}
